syntax = "proto3";

option java_multiple_files = true;
option go_package = "github.com/SourceForgery/tachikoma";

import "google/protobuf/timestamp.proto";

package com.sourceforgery.tachikoma.mq;

message JobMessage {
    // When this job was queued
    google.protobuf.Timestamp creation_timestamp = 101;
    // Executed within 1 minute from this. Jobs without this, will be executed asap
    google.protobuf.Timestamp requested_execution_time = 102;
    oneof jobData {
        SendEmailJob send_email_job = 201;
    }
}

// Job sending the message
message SendEmailJob {
    // The email id to send
    sint64 email_id = 101;
    // The maildomain to send from
    string mail_domain = 102;
}

message OutgoingEmailMessage {
    // When this job was queued
    google.protobuf.Timestamp creation_timestamp = 101;

    // The email id to send
    sint64 email_id = 102;
}
